add sidebar collapser

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require font_awesome5_webfont
  *= require_self
  */
 @import "fonts";
@@ -27,8 +28,76 @@ html, body {
   font-family: 'RobotoMono-Regular';
 }
 
-.kek::first-letter{
-  font-size: 3rem;
+.navbar{
+  background-color: #3b5998;
+  overflow: hidden;
+  height: 63px;
+
+  a {
+    float: left;
+    margin: 8px;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  a#open-sidebar{
+    margin-top: 6px;
+  }
+
+  ul {
+    margin: 8px 0 0 0;
+    list-style: none;
+  }
+
+  a:hover{
+    background-color: #ddd;
+    color: #000;
+  }
 }
 
+.sidebar {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top:0;
+  left: 0;
+  background-color: #111;
+  opacity: 0.9;
+  overflow-x: hidden;
+  padding-top:60px;
+  transition: 0.5s;
+  
+  a {
+    padding: 10px 10px 10px 30px;
+    text-decoration: none;
+    font-size: 22px;
+    color: #ccc;
+    display: block;
+    transition: 0.3s;
+  }
+
+  a:hover {
+    color: #fff;
+  }
+
+  .btn-close{
+    position: absolute;
+    top:0;
+    right: 22px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+}
+
+.main{
+  transition: 0.5s;
+  padding: 20px;
+  overflow-x: hidden;
+  width: 80%;
+}
 
