--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,7 +14,7 @@ html
           i.fas.fa-bars
         =render 'layouts/navlinks'
       .sidebar#side-menu
-        a.btn.btn-close#close-sidebar href="#" onclick="closeSidebar()" &times
+        a.btn.btn-close#close-sidebar href="#" &times
         =render 'layouts/navlinks'
       .main#main
         = yield
