--- a/app/views/layouts/_navlinks.html.slim
+++ b/app/views/layouts/_navlinks.html.slim
@@ -3,7 +3,7 @@ ul
     li
       =link_to 'Ресурсы', '#'
     li
-      =link_to 'Портфель', '#'
+      =link_to 'Портфели', '#'
     =link_to 'Выйти', destroy_user_session_path, method: :delete
   - else
     =link_to 'Войти', new_user_session_path
