--- a/app/views/resource_settings/index.html.slim
+++ b/app/views/resource_settings/index.html.slim
@@ -13,6 +13,6 @@ h1 Брокеры
       .row
         .key Портфель
         .value
-          = link_to 'Посмотреть', '#'
+          = link_to 'Посмотреть', portfolios_path(resource_setting)
       
 h1 = link_to '+', new_resource_setting_path
