add broker type

--- a/app/views/resource_settings/_form.html.slim
+++ b/app/views/resource_settings/_form.html.slim
@@ -11,5 +11,5 @@
     = f.text_field :login
   .field
     = f.label :type
-    = f.text_field :type
+    = f.select :type, ["finam", "tinkoff"]
   .actions = f.submit
