--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,9 @@ html
       .main#main
         .card
           = yield
-        p.alert
-          = alert
-        p.notice
-          = notice
+        toaster inline-template=""
+          .toaster v-show="isShowed"
+            p.alert
+              = alert
+            p.notice
+              = notice
