--- a/app/views/portfolios/show.html.slim
+++ b/app/views/portfolios/show.html.slim
@@ -1,10 +1,3 @@
 h1.cramble Портфель #{I18n.t("enumerize.resource_setting.type.#{@resource.type}")}
 = render "#{@resource.type}"
-
-= content_tag "#{@resource.type}-portfolio".to_sym
-  - if @portfolio.present?
-    .portfolio
-      button class="btn btn-primary" Обновить
-  - else
-    button class="btn btn-primary" Создать
-
+  h1 'kek'
