--- a/app/views/layouts/_navlinks.html.slim
+++ b/app/views/layouts/_navlinks.html.slim
@@ -1,9 +1,7 @@
 ul
   - if user_signed_in?
     li
-      =link_to 'Брокеры', resource_settings_path
-    li
-      =link_to 'Портфели', '#'
+      =link_to 'Портфели', portfolios_path
     =link_to 'Выйти', destroy_user_session_path, method: :delete
   - else
     =link_to 'Войти', new_user_session_path
