add vuex and loader

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,8 @@ html
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body
     .application data-behavior="vue"
+      .loading v-if="$store.state.network.isLoading"
+        .dot-elastic
       nav.navbar
         a#open-sidebar href="#"
           i.fas.fa-bars
