--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -124,3 +124,19 @@ h1 {
   width: 400px;
   background-color: lighten(red, 30);
 }
+
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba($color: #000, $alpha: 0.7);
+  z-index: 9999;
+  .dot-elastic {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    $dot-color: black;
+  }
+}
