fix finam portfolio

--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 14px;
   border-radius: 3px;
+  margin-bottom: 10px;
   .links {
     display: flex;
     flex-direction: column;
@@ -23,6 +24,7 @@
     background: lighten(#3b5998, 50%);
     min-width: 960px;
     width: fit-content;
+    height: 100%;
     padding: 30px;
     border-radius: 3px;
   }
