--- a/app/views/portfolios/_finam.html.slim
+++ b/app/views/portfolios/_finam.html.slim
@@ -1,13 +1,43 @@
-- unless @portfolio&.data.empty?
-  table
-    thead
-      tr
-        - for value in I18n.t("table.head").values
-          td #{value}
-    tbody
-      - @portfolio.data["body"].each do |row|
-        tr
-          - for value in row.values
-            td #{value || "n/a"} 
+finam-portfolio inline-template="" portfolio-id="#{@portfolio.id}"
+  .wrap
+    .portfolio-card
+      div v-if="portfolio"
+        table
+          thead
+            tr
+              td Инструмент
+              td Позиция
+              td Котировка
+              td Оценка
+              td Маржа
+              td Обеспечение
+              td Средняя
+              td Прибыль, день
+              td Прибыль
+          tbody
+            tr v-for="row in portfolio"
+              td {{row.ticker}}
+              td {{row.quantity}}
+              td {{row.rate}}
+              td {{row.equity}}
+              td {{row.maintReq}}
+              td {{row.reqEquity}}
+              td {{row.posAvgPrice}}
+              td {{row.PLDay}}
+              td {{row.unrealizedPnl}}
+      div v-else=""
+        | Нет данных
 
-finam-portfolio data="#{@portfolio&.data.to_json}"
+      button class="btn btn-primary bottom" v-show="hasPortfolio"  @click="create" Обновить
+
+    modal name="modal"
+      .portfolio-card
+        h3.header Загрузить портфель
+        .body
+          .field
+            label for="login" Логин
+            input type="text" name="login" v-model="login"
+          .field
+            label for="password" Пароль
+            input type="password" name="password" v-model="password"
+        button.btn.btn-primary @click="refreshPortfolio" Обновить
