--- a/app/views/portfolios/new.html.slim
+++ b/app/views/portfolios/new.html.slim
@@ -14,7 +14,7 @@ portfolio-new inline-template=""
           input name="login" type="text" v-model="params.credentials.login"
         .field
           label for="password" Password
-          input name="password" type="text" v-model="params.credentials.password"
+          input name="password" type="password" v-model="params.credentials.password"
     div v-if="params.broker=='tinkoff'"
       .field.tinkoff-credentials
         label for="token" Token
