--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,9 +21,4 @@ html
       .main#main
         .card
           = yield
-        toaster inline-template=""
-          .toaster v-show="isShowed"
-            p.alert
-              = alert
-            p.notice
-              = notice
+      toaster alert=alert
