--- a/app/views/portfolios/index.html.slim
+++ b/app/views/portfolios/index.html.slim
@@ -3,9 +3,9 @@ h1 Портфели
   - @portfolios.each do |portfolio|
     .portfolio-item
       .info
-        h1 = I18n.t("enumerize.portfolio.broker.#{portfolio.broker}")
+        h1 = I18n.t("enumerize.portfolio.broker.#{portfolio.broker.name}")
         p Дата последнего обновления #{portfolio.updated_at.strftime('%H:%M %d.%m.%Y')}
-        p Брокерский счёт #{portfolio.account}
+        p Брокерский счёт #{portfolio.account.number}
       .links
         = link_to '<i class="fas fa-eye"></i> Посмотреть'.html_safe, portfolio
         = link_to '<i class="fas fa-trash"></i> Удалить'.html_safe, portfolio, method: :delete
